--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
-	"presets": ["es2015", "stage-2"],
-	"comments": false
+  "presets": [
+    "es2015",
+    "stage-2"
+  ],
+  "plugins": [
+    "transform-runtime"
+  ],
+  "comments": false
 }
