--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "dev": "webpack --config ./build/webpack.dev.config.js --watch",
+    "dev": "webpack --config ./build/webpack.dev.conf.js --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,12 +28,17 @@
     "vue": "^2.1.8"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
+    "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
+    "babel-runtime": "^6.20.0",
+    "css-loader": "^0.26.1",
+    "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "vue-loader": "^10.0.2",
+    "vue-template-compiler": "^2.1.8",
     "webpack": "^1.14.0",
     "webpack-merge": "^2.3.1"
   }
