--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-tap": "^1.0.3"
   },
   "devDependencies": {
+    "autoprefixer": "^6.6.1",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.15.0",
@@ -36,6 +37,16 @@
     "babel-preset-stage-2": "^6.18.0",
     "babel-runtime": "^6.20.0",
     "css-loader": "^0.26.1",
+    "eslint": "^3.13.0",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-html": "^1.7.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-react": "^6.9.0",
+    "file-loader": "^0.9.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "url-loader": "^0.5.7",
