--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^2.0.1",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
