--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,9 @@
     "stage-2"
   ],
   "plugins": [
-    "transform-runtime"
+    "transform-runtime",
+    "syntax-async-functions",
+    "transform-regenerator"
   ],
   "comments": false
 }
