--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "autoprefixer": "^6.6.1",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-regenerator": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-runtime": "^6.20.0",
@@ -50,6 +53,7 @@
     "isparta": "^4.0.0",
     "isparta-loader": "^2.0.0",
     "jasmine": "^2.5.3",
+    "jquery": "^3.1.1",
     "karma": "^1.4.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
