--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "phantomjs-prebuilt": "^2.1.14",
+    "simulant": "^0.2.2",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
