--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "webpack --config ./build/webpack.dev.conf.js --watch",
-    "test": "karma start test/unit/karma.conf.js --single-run"
+    "test": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "autoprefixer": "^6.6.1",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-istanbul": "^3.1.2",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-regenerator": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.15.0",
@@ -39,6 +40,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-runtime": "^6.20.0",
+    "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "eslint": "^3.13.0",
     "eslint-config-airbnb": "^14.0.0",
@@ -50,8 +52,6 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.9.0",
     "file-loader": "^0.9.0",
-    "isparta": "^4.0.0",
-    "isparta-loader": "^2.0.0",
     "jasmine": "^2.5.3",
     "jquery": "^3.1.1",
     "karma": "^1.4.0",
@@ -72,5 +72,9 @@
     "vue-template-compiler": "^2.1.0",
     "webpack": "^1.14.0",
     "webpack-merge": "^2.3.1"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   }
 }
