--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "webpack --config ./build/webpack.dev.conf.js --watch",
+    "dist": "webpack --config ./build/webpack.prod.conf.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"
   },
   "repository": {
@@ -40,6 +41,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-runtime": "^6.20.0",
+    "compression-webpack-plugin": "^0.3.2",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "eslint": "^3.13.0",
