--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
 node_js:
-  - "4"
   - "5"
   - "6"
 install:
   - npm install --dev
-  - npm install -g webpack cross-env
+  - npm install -g karma webpack cross-env
 script:
   - npm run-script unit
