--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-l-carousel",
   "version": "1.0.0",
   "description": "A responsive carousel(namely slider or swiper) component for Vue.js v2.x+.",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "directories": {
     "test": "test"
   },
@@ -18,16 +18,15 @@
   "keywords": [
     "vue",
     "carsousel",
-    "swipe",
+    "swiper",
     "vue-component",
-    "slide"
+    "slider"
   ],
   "author": "Light Leung <lsycxyj@gmail.com>",
   "license": "LGPLv3",
   "homepage": "https://github.com/lsycxyj/vue-l-carousel",
   "dependencies": {
-    "vue": "^2.1.8",
-    "vue-tap": "^1.0.3"
+    "vue": "^2.1.8"
   },
   "devDependencies": {
     "autoprefixer": "^6.6.1",
