--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.9.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "function-bind": "^1.1.0",
     "jasmine": "^2.5.3",
