--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "vue-l-carousel",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A responsive carousel(namely slider or swiper) component for Vue.js v2.x+.",
   "main": "dist/main.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "dev": "webpack --config ./build/webpack.dev.conf.js --watch",
-    "dist": "webpack --config ./build/webpack.prod.conf.js",
+    "dev": "cross-env NODE_ENV=development webpack --config ./build/webpack.dev.conf.js --watch",
+    "dist": "cross-env NODE_ENV=production webpack --config ./build/webpack.prod.conf.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"
   },
   "repository": {
@@ -23,64 +23,69 @@
     "slider"
   ],
   "author": "Light Leung <lsycxyj@gmail.com>",
-  "license": "LGPLv3",
+  "license": "LGPL-3.0-only",
   "homepage": "https://github.com/lsycxyj/vue-l-carousel",
-  "dependencies": {
-    "vue": "^2.1.8"
-  },
   "devDependencies": {
-    "autoprefixer": "^6.6.1",
+    "autoprefixer": "^8.6.4",
     "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-istanbul": "^3.1.2",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-regenerator": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-2": "^6.18.0",
+    "babel-preset-env": "^1.7.0",
     "babel-runtime": "^6.20.0",
-    "compression-webpack-plugin": "^0.3.2",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.13.0",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-html": "^1.7.0",
+    "compression-webpack-plugin": "^1.1.11",
+    "cross-env": "^5.2.0",
+    "css-loader": "^0.28.11",
+    "eslint": "^5.0.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^4.0.5",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-react": "^6.9.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "function-bind": "^1.1.0",
-    "jasmine": "^2.5.3",
-    "jquery": "^3.1.1",
-    "karma": "^1.4.0",
+    "eslint-plugin-react": "^7.10.0",
+    "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "function-bind": "^1.1.1",
+    "gulp": "^3.9.1",
+    "gulp-cli": "^2.0.1",
+    "gulp-zip": "^4.1.0",
+    "jasmine": "^3.1.0",
+    "jquery": "^3.3.1",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
-    "karma-edge-launcher": "^0.2.0",
+    "karma-edge-launcher": "^0.4.2",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^2.0.1",
-    "less": "^2.7.2",
-    "less-loader": "^2.2.3",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^3.0.0",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "phantomjs-prebuilt": "^2.1.14",
+    "postcss-loader": "^2.1.5",
     "simulant": "^0.2.2",
-    "url-loader": "^0.5.7",
-    "vue-loader": "^10.0.0",
-    "vue-style-loader": "^1.0.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "url-loader": "^1.0.1",
+    "vue": "^2.5.16",
+    "vue-loader": "^15.2.4",
+    "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.1.0",
-    "webpack": "^1.14.0",
-    "webpack-merge": "^2.3.1"
+    "webpack": "^4.12.2",
+    "webpack-cli": "^3.0.8",
+    "webpack-merge": "^4.1.3"
   },
   "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+    "node": ">= 8.0.0",
+    "npm": ">= 4.0.0"
   }
 }
